# MyAuth

./: .gitignore  CMakeLists.txt  LICENSE  Maintest.cpp  README.md  secureData.enc  supersecretauthdata
Crypto/: CMakeLists.txt
Crypto/include/: Crypto_HMAC.h  Crypto_HOTP.h  Crypto_Hex.h  Crypto_IO.h
Crypto/src/: Crypto_HMAC.cpp  Crypto_HOTP.cpp  Crypto_Hex.cpp  Crypto_IO.cpp
include/: my_auth.h
src/: CMakeLists.txt  Maintest.cpp  main_test.cpp  main_ui.cpp
src/Crypto/src/: Crypto_HOTP.cpp  Crypto_IO.cpp
src/crypto/: CMakeLists.txt
src/crypto/include/: crypto.h  crypto_hex.h  crypto_io.h
src/crypto/src/: crypto_authentication.cpp  crypto_authentication.h  crypto_filehandler.cpp  crypto_filehandler.h  crypto_hex.cpp  crypto_hmac.cpp  crypto_hotp.cpp  crypto_io.cpp  crypto_runtime.cpp  crypto_runtime.h
src/datatypes/: CMakeLists.txt  datatypes.cpp  datatypes_main.cpp
src/datatypes/include/: datatypes_flags.h  datatypes_secret.h  datatypes_uri.h
src/datatypes/src/: datatypes_secret.cpp  datatypes_uri.cpp
src/filesystem_io/: CMakeLists.txt
src/filesystem_io/crypto/: CMakeLists.txt
src/filesystem_io/crypto/include/: fs_io_crypto.h  fs_io_crypto_filehandler.h
src/filesystem_io/crypto/src/: fs_io_crypto_filehandler.cpp  fs_io_crypto_filehandler.h  fs_io_crypto_import.cpp  fs_io_crypto_import.h
src/filesystem_io/include/: filesystem_io.h  filesystem_io_filehandler.h  filesystem_io_uri.h
src/filesystem_io/src/: filesystem_io_filehandler.cpp  filesystem_io_filehandler.h  filesystem_io_uri.cpp  filesystem_io_uri.h
src/import_export/: CMakeLists.txt
src/import_export/include/: import_export.h
src/import_export/src/: import_export_handler.cpp  import_export_handler.h
src/token/: CMakeLists.txt
src/token/include/: token.h  token_hex.h  token_hmac.h  token_hotp.h  token_io.h  token_totp.h
src/token/src/: token_hex.cpp  token_hex.h  token_hmac.cpp  token_hmac.h  token_hotp.cpp  token_hotp.h  token_io.cpp  token_io.h  token_totp.cpp  token_totp.h
test/: CMakeLists.txt  crypto_hmac_tests.cpp  token_hmac_tests.cpp  token_hotp_tests.cpp  token_totp_tests.cpp
